--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -2,11 +2,15 @@ name: Build Package
 
 env:
   MAIN_BRANCH: "all-pgautofailover"
-  PACKAGE_CLOUD_REPO_NAME: "sample"
-  PACKAGE_ENCRYPTION_KEY: ${{ secrets.PACKAGE_ENCRYPTION_KEY }}
+  PACKAGE_CLOUD_REPO_NAME: "citusdata/community"
+  PACKAGE_CLOUD_API_TOKEN: ${{ secrets.PACKAGE_CLOUD_API_TOKEN }}
+  GH_TOKEN: ${{ secrets.GH_TOKEN }}
+  PACKAGING_SECRET_KEY: ${{ secrets.PACKAGING_SECRET_KEY }}
+  PACKAGING_PASSPHRASE: ${{ secrets.PACKAGING_PASSPHRASE }}
 on:
   push:
-    branches: "**"
+    branches:
+      - "**"
 
   workflow_dispatch:
 
@@ -31,31 +35,39 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Clone tools branch
-        run: git clone -b v0.8.1 --depth=1  https://github.com/citusdata/tools.git tools
+        run: git clone -b v0.8.2 --depth=1  https://github.com/citusdata/tools.git tools
 
       - name: Install package dependencies
-        run: sudo apt install libcurl4-openssl-dev libssl-dev
+        run: sudo apt-get update && sudo apt-get install libcurl4-openssl-dev libssl-dev python3-testresources
 
       - name: Install python requirements
         run: python -m pip install -r tools/packaging_automation/requirements.txt
 
+      # This step is to fetch the images unanonymously to have higher bandwidth
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USER_NAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
       - name: Build packages
         run: |
           python -m  tools.packaging_automation.citus_package \
-          --gh_token "${{ secrets.GH_TOKEN }}" \
+          --gh_token "${GH_TOKEN}" \
           --platform "${{ matrix.platform }}" \
-          --build_type 'release' \
-          --secret_key "${{ secrets.PACKAGING_SECRET_KEY }}" \
-          --passphrase "${{ secrets.PACKAGING_PASSPHRASE }}" \
+          --build_type "release" \
+          --secret_key "${PACKAGING_SECRET_KEY}" \
+          --passphrase "${PACKAGING_PASSPHRASE}" \
           --output_dir "$(pwd)/packages/" \
-          --input_files_dir "$(pwd)"
+          --input_files_dir "$(pwd)" \
+          --output_validation
 
       - name: Publish packages
         run: |
           python -m  tools.packaging_automation.upload_to_package_cloud \
-          --platform ${{ matrix.platform }} \
-          --package_cloud_api_token ${{ secrets.PACKAGE_CLOUD_API_TOKEN }} \
+          --platform "${{ matrix.platform }}" \
+          --package_cloud_api_token "${PACKAGE_CLOUD_API_TOKEN}" \
           --repository_name "${PACKAGE_CLOUD_REPO_NAME}" \
           --output_file_path "$(pwd)/packages" \
           --current_branch "${GITHUB_REF##*/}" \
-          --main_branch ${MAIN_BRANCH}
+          --main_branch "${MAIN_BRANCH}"
