--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -28,6 +28,7 @@ jobs:
           - ol/7
           - debian/stretch
           - debian/buster
+          - debian/bullseye
           - ubuntu/bionic
           - ubuntu/focal
 
@@ -36,7 +37,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Clone tools branch
-        run: git clone -b v0.8.2 --depth=1  https://github.com/citusdata/tools.git tools
+        run: git clone -b v0.8.5 --depth=1  https://github.com/citusdata/tools.git tools
 
       - name: Install package dependencies
         run: sudo apt-get update && sudo apt-get install libcurl4-openssl-dev libssl-dev python3-testresources
