--- a/.github/workflows/update-pgxn-version.yml
+++ b/.github/workflows/update-pgxn-version.yml
@@ -1,7 +1,6 @@
 name: Update Version on PGXN Config Files
 
 env:
-  PROJECT_VERSION: ${{ github.event.inputs.project_version }}
   GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
 on:
@@ -10,27 +9,41 @@ on:
       project_version:
         description: "Version number to be released e.g 10.0.3"
         required: true
+      microsoft_email:
+        description: "Email to be written on changelogs"
+        default: "gindibay@microsoft.com"
+        required: false
+      name:
+        description: "Name to be written on changelogs"
+        default: "Gurkan Indibay"
+        required: false
 
 jobs:
   update_pgxn:
     name: Update pgxn configuration
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: sudo apt install libcurl4-openssl-dev libssl-dev
+        run: sudo apt-get update && sudo apt-get install libcurl4-openssl-dev libssl-dev python3-testresources
 
       - name: Clone Tools branch
-        run: git clone --depth 1 --branch v0.8.1 https://github.com/citusdata/tools.git
+        run: git clone --depth 1 --branch v0.8.6 https://github.com/citusdata/tools.git
 
       - name: Install Python requirements
         run: python -m pip install -r tools/packaging_automation/requirements.txt
 
+      - name: Set git name and email
+        run: |
+          git config --global user.email "${{ github.event.inputs.microsoft_email }}" && \
+          git config --global user.name "${{ github.event.inputs.name }}"
+
       - name: Update pgxn files
         run: |
-          python -m packaging_automation.update_pgxn \
-          --prj_ver ${PROJECT_VERSION} \
-          --gh_token ${GH_TOKEN} \
+          python -m tools.packaging_automation.update_pgxn \
+          --prj_ver ${{ github.event.inputs.project_version }} \
+          --gh_token "${GH_TOKEN}" \
           --pipeline \
           --exec_path "$(pwd)"
