--- a/.github/workflows/build-pgaf-enterprise-nightlies.yml
+++ b/.github/workflows/build-pgaf-enterprise-nightlies.yml
@@ -66,7 +66,8 @@ jobs:
           --secret_key "${PACKAGING_SECRET_KEY}" \
           --passphrase "${PACKAGING_PASSPHRASE}" \
           --output_dir "$(pwd)/packages/" \
-          --input_files_dir "$(pwd)/packaging"
+          --input_files_dir "$(pwd)/packaging" \
+          --output_validation
 
       - name: Publish packages
         run: |
