--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 sudo: required
 services: [docker]
 language: perl
-perl: "5.18"
+perl:
+  - "5.18"
 env:
   matrix:
     - TARGET_PLATFORM=centos,8
