--- a/dockerfiles/centos-8-pg14/Dockerfile
+++ b/dockerfiles/centos-8-pg14/Dockerfile
@@ -40,6 +40,7 @@ RUN if [[ centos   == oraclelinux ]] && [[ 8 == 7 ]]; then yum install -y wget \
 # install build tools and PostgreSQL development files
 RUN ( yum install -y https://download.postgresql.org/pub/repos/yum/reporpms/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm \
     && [[ -z "epel-release" ]] || yum install -y epel-release) \
+    && yum update -y \
     && yum groupinstall -y 'Development Tools' \
     && yum install -y \
         curl \
