--- a/dockerfiles/oraclelinux-7-pg10/Dockerfile
+++ b/dockerfiles/oraclelinux-7-pg10/Dockerfile
@@ -40,6 +40,7 @@ RUN if [[ oraclelinux   == oraclelinux ]] && [[ 7 == 7 ]]; then yum install -y w
 # install build tools and PostgreSQL development files
 RUN ( yum install -y https://download.postgresql.org/pub/repos/yum/reporpms/EL-7-x86_64/pgdg-redhat-repo-latest.noarch.rpm \
     && [[ -z "" ]] || yum install -y ) \
+    && yum update -y \
     && yum groupinstall -y 'Development Tools' \
     && yum install -y \
         curl \
