--- a/packaging_ignore.yml
+++ b/packaging_ignore.yml
@@ -16,6 +16,7 @@ base:
   - ".*: substitution variable \\$\\{postgresql:Depends\\} unused, but is defined.*"
   - ".* unused substitution variable \\$\\{postgresql:Depends\\}.*"
   - ".* warning: field 'compareValueFunctionCall' with variable sized type 'FunctionCall2InfoData'.*"
+  - "1 warning generated"
 
 debian:
   - ".*: W: invalid-license Commercial"
