--- a/packaging_ignore.yml
+++ b/packaging_ignore.yml
@@ -15,6 +15,8 @@ base:
   - ".* unused substitution variable \\$\\{misc:Depends\\}.*"
   - ".*: substitution variable \\$\\{postgresql:Depends\\} unused, but is defined.*"
   - ".* unused substitution variable \\$\\{postgresql:Depends\\}.*"
+  - ".* warning: field 'compareValueFunctionCall' with variable sized type 'FunctionCall2InfoData'.*"
+  - "1 warning generated"
 
 debian:
   - ".*: W: invalid-license Commercial"
