--- a/.github/workflows/build-citus-community-nightlies.yml
+++ b/.github/workflows/build-citus-community-nightlies.yml
@@ -31,6 +31,7 @@ jobs:
           - debian/bullseye
           - ubuntu/bionic
           - ubuntu/focal
+          - ubuntu/jammy
 
     steps:
       - name: Checkout repository
