--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -32,6 +32,7 @@ jobs:
           - debian/bullseye
           - ubuntu/bionic
           - ubuntu/focal
+          - ubuntu/jammy
 
     steps:
       - name: Checkout repository
