--- a/packaging_ignore.yml
+++ b/packaging_ignore.yml
@@ -19,8 +19,9 @@ base:
   - ".*: warning: 'RSA_generate_key_ex' is deprecated: Since OpenSSL 3.0 \\[-Wdeprecated-declarations\\]"
   - ".*: warning: 'RSA_new' is deprecated \\[-Wdeprecated-declarations\\]"
   - ".*: warning: 'RSA_generate_key_ex' is deprecated \\[-Wdeprecated-declarations\\]"
-  - ".*: warning: 'EVP_PKEY_assign' is deprecated \\[-Wdeprecated-declarations\\]"
-  
+  - ".*: warning: 'EVP_PKEY_assign' is deprecated.*"
+  - "\\d+ warnings generated."
+
 debian:
   - ".*: W: invalid-license Commercial"
   - ".*: W: no-documentation"
