--- a/.github/workflows/build-package-test.yml
+++ b/.github/workflows/build-package-test.yml
@@ -74,7 +74,7 @@ jobs:
           POSTGRES_VERSION: ${{ matrix.POSTGRES_VERSION }}
 
       - name: Clone tools repo for test
-        run: git clone -b v0.8.13 --depth=1  https://github.com/citusdata/tools.git tools
+        run: git clone -b one_branch_additions --depth=1  https://github.com/citusdata/tools.git tools
 
 #      - name: Execute packaging tests
 #        run: |
