--- a/dockerfiles/ubuntu-jammy-all/Dockerfile
+++ b/dockerfiles/ubuntu-jammy-all/Dockerfile
@@ -71,6 +71,7 @@ RUN echo 'deb http://apt.postgresql.org/pub/repos/apt/ jammy-pgdg main' > /etc/a
         liblz4-1 \
         libzstd1 \
         libzstd-dev \
+        sudo \
     && rm -rf /var/lib/apt/lists/*
 
 RUN pip3 install sphinx
