--- a/.github/workflows/build-citus-community-nightlies.yml
+++ b/.github/workflows/build-citus-community-nightlies.yml
@@ -25,7 +25,8 @@ jobs:
         platform:
           - el/7
           - el/8
-          - ol/7
+          # temporarily removed from nightlies since pg15 beta is not being downloaded for ol/7
+          # - ol/7
           - debian/stretch
           - debian/buster
           - debian/bullseye
