Renames pgazure nightly pipeline

--- a/.github/workflows/build-pgazure-nightlies.yml
+++ b/.github/workflows/build-pgazure-nightlies.yml
@@ -1,4 +1,4 @@
-name: Build and publish citus community nightly packages
+name: Build and publish pgazure nightly packages
 
 env:
   MAIN_BRANCH: "all-pg-azure-storage"
