--- a/.github/workflows/build-pgazure-nightlies.yml
+++ b/.github/workflows/build-pgazure-nightlies.yml
@@ -26,7 +26,9 @@ jobs:
       matrix:
         platform:
           - el/7
-          - el/8
+# We will remove el/8 support for all apps in the future. For this project packaging image should be updated.But we
+# don't want to invest.
+          # - el/8
 # temporarily removed from nightlies since pg15 beta is not being downloaded for ol/7
 # - ol/7
 # Haven't worked on deb support for pgazure. Will enable below block after deb support is added
